# etho-renamer

./: .editorconfig  .gitattributes  .gitignore  00_LEGGIMI_PRIMA.txt  BUILD_EXE.md  CONTRIBUTING.md  FEATURES.md  INDEX.md  INSTALLATION.md  INSTALLAZIONE.md  LICENSE.txt  NEXT_STEPS.txt  PROJECT_COMPLETE.txt  README.md  SETUP.md  START_HERE.md  STRUCTURE.txt  app.py  build_exe.bat  build_exe.ps1  example_usage.py  pyproject.toml  quickstart.sh  requirements.txt  run.bat  setup.bat  watch.py
src/etho_renamer/: __init__.py  config.py  core.py  ffprobe.py  models.py  report.py  validation.py
src/etho_renamer/ui/: __init__.py  main_window.py
tests/: test_core.py
