[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etho-renamer"
version = "1.0.0"
description = "Desktop app per rinominare video di cani secondo convenzione standardizzata"
authors = [{name = "Developer"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["etho_renamer"]
package-dir = {"etho_renamer" = "src/etho_renamer"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
